@@ -109,7 +109,7 @@ freeamp-no-uris
 	can_open_multiple_files=true
 	expects_uris=false
 	requires_terminal=false
-	mime_types=audio/x-mp3-playlist,audio/x-mpegurl
+	mime_types=audio/x-mp3-playlist,audio/x-mpegurl,audio/x-scpls
 
 galeon
 	command=galeon
@@ -531,7 +531,7 @@ xmms-no-uris
 	can_open_multiple_files=true
 	expects_uris=false
 	requires_terminal=false
-	mime_types=audio/x-mp3-playlist,audio/x-mpegurl
+	mime_types=audio/x-mp3-playlist,audio/x-mpegurl,audio/x-scpls
 
 xmps
 	command=xmps
